[package]
name = "poem-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
futures-util = "0.3.25"
poem = { version = "1.3.48", features = ['websocket'] }
reqwest = "0.11.12"
tokio = "1.21.2"
tokio-tungstenite = "0.17.2"
