[package]
name = "poem-proxy"
version = "0.1.1"
authors = ["Joey <josephameadows@gmail.com>"]
edition = "2021"
rust-version = "1.65.0"
description = "A simple proxy endpoint compatible with the Poem web framework"
license = "MIT"
keywords = ["poem", "http", "proxy", "web", "async"]
readme = "README.md"
repository = "https://github.com/Parrhesia-Base/poem-proxy"
categories = ["network-programming", "web-programming", "web-programming::http-server", "web-programming::websocket"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
futures-util = "0.3.25"
http = "0.2.8"
httparse = "1.8.0"
poem = { version = "1.3.48", features = ['websocket'] }
reqwest = "0.11.12"
tokio = "1.21.2"
tokio-tungstenite = "0.17.2"
